# ml_reg_games

./: .gitignore  README.md  agents.py  calibration.py  main.py  parameters.py  pyproject.toml  simulation.py
baselines/fairPATE/: utils.py
baselines/fairPATE/analysis/: rdp_cumulative.py
baselines/fairPATE/architectures/: resnet_pretrained.py
baselines/fairPATE/datasets/celeba/: celeba_dataset.py  celeba_utils.py
baselines/fairPATE/datasets/fairface/: fairface_dataset.py  fairface_utils.py
baselines/fairPATE/datasets/utkface/: utkface_dataset.py  utkface_files.npy  utkface_utils.py
baselines/fairPATE/models/: ensemble_model.py  load_models.py  private_model.py
experiments/: celeba_experiment.sh  fairface_experiment.sh  two_datasets_experiment.sh  utkface_experiment.sh
previous_results/loss_functions/: lambda_calibration.ipynb  loss_functions_helper.ipynb  pf_surface_plot.ipynb
previous_results/loss_functions/utkface/fairPATE/: results.csv
visualizations/: graphing_notebook.ipynb  visualization.py
