[tool.poetry]
name = "governance_games_capc"
version = "0.1.0"
description = "ML Governance Games using CaPC Code"
authors = ["Mohammad Yaghini <mohammad.yaghini@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.9.12,<3.11"
numpy = "1.21.4"
pandas = "1.3.4"
scipy = "1.7.3"
seaborn = ">=0.11.2"
plotly = "^5.10.0"
joblib = "^1.1.0"
autodp = "^0.2"
click = "^8.1.3"
six = "^1.16.0"
absl-py = "^1.2.0"
ax-platform = "^0.2.5"
easydict = "^1.9"
numba = "^0.56.0"
opencv-python = "^4.6.0"
imageio = "^2.21.1"
scikit-image = "^0.19.3"
pretrainedmodels = "^0.7.4"
pydicom = "~1.4.2"
kaleido = "0.2.1"
opacus = "1.1"
openpyxl = "^3.0.10"
pyarrow = "^11.0.0"
torch = "^2.0.0"
torchvision = "^0.15.1"
tensorboardx = "^2.6.2.2"
regex = "^2023.12.25"
functorch = "^2.0.0"

[tool.poetry.dev-dependencies]
jupyter = "^1.0.0"
jupyterlab = "^3.4.5"
pytest = "^7.1.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"


